--- a/WeatherProject/src/main/resources/templates/weather.html
+++ b/WeatherProject/src/main/resources/templates/weather.html
@@ -19,7 +19,7 @@
         <tbody>
         <tr>
             <td th:text="${humidity} +'%'"></td>
-            <td th:text="${temperature} + ' Degrees'"></td>
+            <td th:text="${temperature} + '°F'"></td>
             <td th:text="${summary}"></td>
         </tr>
         </tbody>
